force-app/main/default/objects/AI_Canvas_Template__c/AI_Canvas_Template__c.object-meta.xml
<CustomObject>
    <label>Canvas Template</label>
    <nameField>
        <label>Canvas Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canvas Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>