force-app/main/default/objects/AI_Canvas_Template__c/fields/Auto_Refresh_Duration__c.field-meta.xml
<CustomField>
    <fullName>Auto_Refresh_Duration__c</fullName>
    <label>Auto-Refresh Duration (in Hours)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>