force-app/main/default/objects/AI_Canvas_Template__c/fields/Visibility_Condition__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Condition__c</fullName>
    <label>Visibility Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>