force-app/main/default/objects/AI_Canvas_Template__c/validationRules/Auto_Refresh_musr_be_a_Positive_Integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Auto_Refresh_musr_be_a_Positive_Integer</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Auto_Refresh_Duration__c &lt; 0,
    Auto_Refresh_Duration__c &lt;&gt; FLOOR(Auto_Refresh_Duration__c)
)</errorConditionFormula>
    <errorDisplayField>Auto_Refresh_Duration__c</errorDisplayField>
    <errorMessage>Auto Refresh Duration must be a positive whole number with no decimal places.</errorMessage>
</ValidationRule>